--- a/recipe.html
+++ b/recipe.html
@@ -3,9 +3,9 @@
 <head>
   <nav>
     <ul>
-    <li><a href="http://calleiot.com/maeghan/index.html">Home</a></li>
-    <li><a href="http://calleiot.com/maeghan/resume.html">Prog 109 Assignments</a></li>
-    <li><a href="http://calleiot.com/maeghan/recipe.html">Best Recipes</a></li>
+    <li><a href="http://maeghanc.github.io/index.html">Home</a></li>
+    <li><a href="http://maeghanc.github.io/resume.html">Prog 109 Assignments</a></li>
+    <li><a href="http://maeghanc.github.io/recipe.html">Best Recipes</a></li>
     </ul>
   </nav>
 </head>
