--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
   <title>Resume</title>
   <nav>
     <ul>
-      <li><a href="http://calleiot.com/maeghan/index.html">Home</a></li>
-      <li><a href="http://calleiot.com/maeghan/resume.html">Resume Assignment</a></li>
-      <li><a href="http://calleiot.com/maeghan/recipe.html">Recipe</a></li>
+    <li><a href="http://maeghanc.github.io/index.html">Home</a></li>
+    <li><a href="http://maeghanc.github.io/resume.html">Prog 109 Assignments</a></li>
+    <li><a href="http://maeghanc.github.io/recipe.html">Best Recipes</a></li>
     </ul>
   </nav>
 </head>
